--- a/index.html
+++ b/index.html
@@ -28,6 +28,49 @@
         </div>
     </div>
 
+    <div class="section-two">
+        <div class="title">
+            <p>Some random information</p>
+        </div>
+        <div class="cards">
+            <div class="card">
+                <div class="box"></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="card">
+                <div class="box"></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="card">
+                <div class="box"></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="card">
+                <div class="box"></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+        </div>
+    </div>
 
+    <div class="section-three">
+        <div class="container">
+            <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All i know is that it looks nice</p>
+            <p class="author">-Thor, God of Thunder</p>
+        </div>
+    </div>
+
+    <div class="section-four">
+        <div class="sign-up-card">
+            <div>
+                <h1 class="logo">Call to action! It's time!</h1>
+                <p>Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <button>Sign up</button>
+        </div>
+    </div>
+
+    <div class="footer">
+        <p>Copyright @ The Odin Project 2025</p>
+    </div>
 </body>
 </html>
